# weasel-lsp

./: .clang-format  .clangd.in  .gitignore  CLAUDE.md  CMakeLists.txt  compile_commands.json  install.sh
.cache/clangd/index/: context.hpp.3C07378CA9C9679C.idx  factory.hpp.EE15AB974A33E3C9.idx  node.hpp.53941609F5DCF235.idx  renderer.cpp.E21337EE36A479FA.idx  renderer.hpp.9409AA996212A07E.idx  task_list.cpp.FF371C6DB36C88DE.idx  test_context.cpp.50F7843C38D1D0BC.idx  test_factory.cpp.55D597BC3861DB53.idx  test_node.cpp.3D10F61640C0830D.idx  test_renderer.cpp.988C18A5DBFBBD7E.idx  weasel.hpp.3BF70D80DB6D9375.idx
.github/workflows/: ci.yml  release.yml
compiler/: CMakeLists.txt
compiler/include/weasel/compiler/: boundary.hpp  ccx_parser.hpp  diagnostic.hpp  emitter.hpp  jsx_parser.hpp  scanner.hpp  source.hpp  transpiler.hpp  version.hpp.in
compiler/src/: boundary.cpp  ccx_parser.cpp  emitter.cpp  jsx_parser.cpp  main.cpp  scanner.cpp  source.cpp  transpiler.cpp
docs/: editor-setup.md
examples/: CMakeLists.txt  task_list.cpp
include/weasel/: factory.hpp  node.hpp  weasel.hpp
lsp/: CMakeLists.txt  main.cpp
lsp/include/weasel/lsp/: clangd_proxy.hpp  document_store.hpp  features.hpp  jsonrpc.hpp  server.hpp
lsp/src/: clangd_proxy.cpp  completion.cpp  definition.cpp  diagnostics.cpp  document_store.cpp  jsonrpc.cpp  server.cpp
packaging/homebrew/: weasel.rb  weaselc.rb
runtime/: CMakeLists.txt
runtime/include/weasel/: context.hpp  factory.hpp  node.hpp  renderer.hpp  weasel.hpp
runtime/src/: renderer.cpp
src/: renderer.cpp
tests/: CMakeLists.txt  test_context.cpp  test_factory.cpp  test_node.cpp  test_renderer.cpp
tests/compiler/: CMakeLists.txt  test_boundary.cpp  test_component_info.cpp  test_diagnostic.cpp  test_line_map.cpp  test_position.cpp  test_transpiler.cpp
tests/compiler/fixtures/: task_list.cc  task_list.ccx  task_list.weasel
tests/lsp/: CMakeLists.txt  mock_clangd.cpp  test_clangd_proxy.cpp  test_lsp_server.cpp
